[package]
name = "kiwisdr-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
flac-bound = "0.3.0"
hound = "3.5.1"
kiwisdr = { path = "../kiwisdr-rs" }
log = "0.4.20"
os = "0.1.0"
serde = { version = "1.0.196", features = ["derive"] }
simple_logger = "4.3.3"
tokio = "1.35.1"
tokio-util = "0.7.10"
toml = "0.8.8"
url = "2.5.0"
