[package]
name = "kiwisdr-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
byteorder = "1.5.0"
colored = "2.1.0"
flac-bound = "0.3.0"
futures-util = "0.3.30"
hound = "3.5.1"
log = "0.4.20"
os = "0.1.0"
rand = "0.8.5"
regex = "1.10.3"
serde = { version = "1.0.196", features = ["derive"] }
simple_logger = "4.3.3"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = "0.21.0"
tokio-util = "0.7.10"
toml = "0.8.8"
url = "2.5.0"
